<?xml version="1.0"?>
<package>
  <name>depth_calibration</name>
  <version>0.0.0</version>
  <description>xs_data_reader</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rares@todo.todo">rares</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
